Support multiple Cognito user pools by getting the UserPoolId from the JWT issuer instead of configuration

--- a/cognito/src/main/resources/application.properties
+++ b/cognito/src/main/resources/application.properties
@@ -10,3 +10,6 @@ quarkus.dynamodb.sync-client.type=apache
 
 gwt.dynamodb.table-suffix=
 %dev.gwt.dynamodb.table-suffix=-test
+
+bgf.tableName=boardgamefiesta-prod
+%dev.bgf.tableName=boardgamefiesta-dev
