Add userId to WebSocketConnections interface

--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <module>cognito</module>
         <module>domain</module>
         <module>dynamodb</module>
+        <module>dynamodb-triggers</module>
         <module>gwt</module>
         <module>istanbul</module>
         <module>powergrid</module>
