Remove roles claim property because groups and pre token generation is no longer needed

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 quarkus.log.level=INFO
 %dev.quarkus.log.category."com.boardgamefiesta".level=DEBUG
+#%dev.quarkus.log.category."io.quarkus.security".level=TRACE
+#%dev.quarkus.log.category."io.quarkus.oidc".level=TRACE
 #%dev.quarkus.log.category."io.quarkus.narayana".level=TRACE
 #%dev.quarkus.log.category."com.arjuna.ats.jta".level=TRACE
 
@@ -13,13 +15,11 @@ quarkus.ses.sync-client.type=apache
 quarkus.oidc.auth-server-url=https://cognito-idp.eu-west-1.amazonaws.com/eu-west-1_4FuZdxo27
 quarkus.oidc.client-id=75mphvul79khilegesecif6o0k
 quarkus.oidc.token.principal-claim=cognito:username
-quarkus.oidc.roles.role-claim-path=cognito:groups
 quarkus.oidc.authentication.scopes=openid
 
 quarkus.oidc."old".auth-server-url=https://cognito-idp.eu-west-1.amazonaws.com/eu-west-1_c5qwAzc0x
 quarkus.oidc."old".client-id=39334dh8ifidq5dpmnch2vnopr
 quarkus.oidc."old".token.principal-claim=cognito:username
-quarkus.oidc."old".roles.role-claim-path=cognito:groups
 quarkus.oidc."old".authentication.scopes=openid
 
 %dev.quarkus.oidc.auth-server-url=https://cognito-idp.eu-west-1.amazonaws.com/eu-west-1_s6Ypfd935
