--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -12,6 +12,8 @@ quarkus.dynamodb.sync-client.type=apache
 
 quarkus.ses.sync-client.type=apache
 
+quarkus.sqs.sync-client.type=apache
+
 quarkus.oidc.auth-server-url=https://cognito-idp.eu-west-1.amazonaws.com/eu-west-1_4FuZdxo27
 quarkus.oidc.client-id=75mphvul79khilegesecif6o0k
 quarkus.oidc.token.principal-claim=cognito:username
@@ -27,6 +29,12 @@ quarkus.oidc."old".authentication.scopes=openid
 
 gwt.dynamodb.table-suffix=
 %dev.gwt.dynamodb.table-suffix=-test
+
+bgf.tableName=boardgamefiesta-prod
+%dev.bgf.tableName=boardgamefiesta-dev
+
+bgf.sqs.queue-url=https://sqs.eu-west-1.amazonaws.com/598172618529/boardgamefiesta-prod
+%dev.bgf.sqs.queue-url=https://sqs.eu-west-1.amazonaws.com/598172618529/boardgamefiesta-dev
 
 bgf.url=https://boardgamefiesta.com
 bgf.from=info@boardgamefiesta.com
