Enable debug logging for SQS listener

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 quarkus.log.level=INFO
+quarkus.log.category."com.boardgamefiesta.server.automa.SqsListener".level=DEBUG
 %dev.quarkus.log.category."com.boardgamefiesta".level=DEBUG
 #%dev.quarkus.log.category."io.quarkus.security".level=TRACE
 #%dev.quarkus.log.category."io.quarkus.oidc".level=TRACE
