--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -30,8 +30,8 @@ quarkus.oidc."old".authentication.scopes=openid
 gwt.dynamodb.table-suffix=
 %dev.gwt.dynamodb.table-suffix=-test
 
-bgf.tableName=boardgamefiesta-prod
-%dev.bgf.tableName=boardgamefiesta-dev
+gwt.dynamodb.table-name=boardgamefiesta-prod
+%dev.gwt.dynamodb.table-name=boardgamefiesta-dev
 
 bgf.sqs.queue-url=https://sqs.eu-west-1.amazonaws.com/598172618529/boardgamefiesta-prod
 %dev.bgf.sqs.queue-url=https://sqs.eu-west-1.amazonaws.com/598172618529/boardgamefiesta-dev
