Fix error handling Cognito triggers

--- a/dynamodb-triggers/pom.xml
+++ b/dynamodb-triggers/pom.xml
@@ -131,6 +131,10 @@
             <artifactId>quarkus-test-amazon-lambda</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
