Fix email when no translations for language

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -24,14 +24,14 @@ quarkus.oidc."old".client-id=39334dh8ifidq5dpmnch2vnopr
 quarkus.oidc."old".token.principal-claim=cognito:username
 quarkus.oidc."old".authentication.scopes=openid
 
-%dev.quarkus.oidc.auth-server-url=https://cognito-idp.eu-west-1.amazonaws.com/eu-west-1_s6Ypfd935
-%dev.quarkus.oidc.client-id=5kpjjhqbnjmr5bm8bnsfjqmq13
+#%dev.quarkus.oidc.auth-server-url=https://cognito-idp.eu-west-1.amazonaws.com/eu-west-1_s6Ypfd935
+#%dev.quarkus.oidc.client-id=5kpjjhqbnjmr5bm8bnsfjqmq13
 
 gwt.dynamodb.table-suffix=
 %dev.gwt.dynamodb.table-suffix=-test
 
 gwt.dynamodb.table-name=boardgamefiesta-prod
-%dev.gwt.dynamodb.table-name=boardgamefiesta-dev
+#%dev.gwt.dynamodb.table-name=boardgamefiesta-dev
 
 bgf.sqs.queue-url=https://sqs.eu-west-1.amazonaws.com/598172618529/boardgamefiesta-prod
 %dev.bgf.sqs.queue-url=https://sqs.eu-west-1.amazonaws.com/598172618529/boardgamefiesta-dev
