--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -24,14 +24,11 @@ quarkus.oidc."old".client-id=39334dh8ifidq5dpmnch2vnopr
 quarkus.oidc."old".token.principal-claim=cognito:username
 quarkus.oidc."old".authentication.scopes=openid
 
-#%dev.quarkus.oidc.auth-server-url=https://cognito-idp.eu-west-1.amazonaws.com/eu-west-1_s6Ypfd935
-#%dev.quarkus.oidc.client-id=5kpjjhqbnjmr5bm8bnsfjqmq13
-
-gwt.dynamodb.table-suffix=
-%dev.gwt.dynamodb.table-suffix=-test
+%dev.quarkus.oidc.auth-server-url=https://cognito-idp.eu-west-1.amazonaws.com/eu-west-1_s6Ypfd935
+%dev.quarkus.oidc.client-id=5kpjjhqbnjmr5bm8bnsfjqmq13
 
 gwt.dynamodb.table-name=boardgamefiesta-prod
-#%dev.gwt.dynamodb.table-name=boardgamefiesta-dev
+%dev.gwt.dynamodb.table-name=boardgamefiesta-dev
 
 bgf.sqs.queue-url=https://sqs.eu-west-1.amazonaws.com/598172618529/boardgamefiesta-prod
 %dev.bgf.sqs.queue-url=https://sqs.eu-west-1.amazonaws.com/598172618529/boardgamefiesta-dev
@@ -39,9 +36,6 @@ bgf.sqs.queue-url=https://sqs.eu-west-1.amazonaws.com/598172618529/boardgamefies
 bgf.url=https://boardgamefiesta.com
 bgf.from=info@boardgamefiesta.com
 %dev.bgf.url=http://localhost:4200
-
-gwt.push.privateKey=BJgqYxOkVeqrTWZryTnc3zA-VBTESLna7y-5ExPfvDe3VTMVkDTxZ58HwWbjiLFXWGvxxl8bhuSjDXAbL34z_cE
-gwt.push.publicKey=4NTjW33m8L-OeVEuw7_pyYNyVxc-pLuIInuFVt21sas
 
 quarkus.http.cors=true
 quarkus.http.cors.origins=https://boardgamefiesta.com,https://www.boardgamefiesta.com
