--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -9,9 +9,7 @@ quarkus.log.level=INFO
 quarkus.log.console.format=%d{yyyy-MM-dd HH:mm:ss.SSS} %-5p [%c{3.}] (%t) %s%e%n
 
 quarkus.dynamodb.sync-client.type=apache
-
 quarkus.ses.sync-client.type=apache
-
 quarkus.sqs.sync-client.type=apache
 
 quarkus.oidc.auth-server-url=https://cognito-idp.eu-west-1.amazonaws.com/eu-west-1_4FuZdxo27
@@ -25,6 +23,7 @@ quarkus.oidc.authentication.scopes=openid
 gwt.dynamodb.table-name=boardgamefiesta-prod
 %dev.gwt.dynamodb.table-name=boardgamefiesta-dev
 
+bgf.sqs.enabled=true
 bgf.sqs.queue-url=https://sqs.eu-west-1.amazonaws.com/598172618529/boardgamefiesta-prod
 %dev.bgf.sqs.queue-url=https://sqs.eu-west-1.amazonaws.com/598172618529/boardgamefiesta-dev
 
