--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -31,6 +31,8 @@ bgf.url=https://boardgamefiesta.com
 bgf.from=info@boardgamefiesta.com
 %dev.bgf.url=http://localhost:4200
 
+bgf.stats.enabled=false
+
 quarkus.http.cors=true
 quarkus.http.cors.origins=https://boardgamefiesta.com,https://www.boardgamefiesta.com
 %dev.quarkus.http.cors.origins=http://localhost:4200
