Move lambda http resource into separate module to fix issue with Quarkus not listening on port 8080

--- a/aws/apigw.yaml
+++ b/aws/apigw.yaml
@@ -59,4 +59,4 @@ Resources:
           GWT_DYNAMODB_TABLE_NAME: !Sub 'boardgamefiesta-${Environment}'
       Code:
         S3Bucket: boardgamefiesta-builds
-        S3Key: !Sub '${Version}/server.zip'
+        S3Key: !Sub '${Version}/lambda-http.zip'
