--- a/lambda-http/pom.xml
+++ b/lambda-http/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>lambda</artifactId>
+    <artifactId>lambda-http</artifactId>
 
     <properties>
         <quarkus-plugin.version>1.9.2.Final</quarkus-plugin.version>
