--- a/server/pom.xml
+++ b/server/pom.xml
@@ -91,11 +91,11 @@
             <artifactId>istanbul</artifactId>
             <scope>runtime</scope>
         </dependency>
-        <dependency>
-            <groupId>com.boardgamefiesta</groupId>
-            <artifactId>powergrid</artifactId>
-            <scope>runtime</scope>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.boardgamefiesta</groupId>-->
+<!--            <artifactId>powergrid</artifactId>-->
+<!--            <scope>runtime</scope>-->
+<!--        </dependency>-->
 
         <dependency>
             <groupId>jakarta.websocket</groupId>
